# simple-regex

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: mail_matching.rs  phone_number.rs
src/: lib.rs
